<resources>
    <string name="app_name">AWMTest4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="texto_boton">Nombre</string>
    <string name="nombre">Nombre:</string>
    <string name="tab_1">Inicio</string>
    <string name="tab_2">Agregar</string>
    <string name="tab_3">Usuario</string>
    <string name="usuari">Usuario:</string>
    <string name="correo">rafa@hotmail.com</string>
    <string name="contacto">Contáctanos:</string>
    <string name="contactocon">Conectar con:</string>
    <string name="title_activity_editar">Editar Dispositivo</string>
    <string name="Correo_inicio">Correo Electronico:</string>
    <string name="Correo_usuario">Correo Electronico</string>
    <string name="Contrasena">Contraseña:</string>
    <string name="Contrasena1">Contraseña</string>
    <string name="Inicio_Sesion">Iniciar Sesion</string>
    <string name="Telefono1">000-000-0000</string>
    <string name="celular">Movil</string>
    <string name="cancelar">Cancelar</string>
    <string name="Registrar">Registrar</string>
    <string name="Guardar">Registrar Usuario</string>


    <string-array name="funcionalidad">
        <item>SELECCIONE</item>
        <item>PORTON</item>
        <item>ON-OFF</item>
        <item>-</item>
    </string-array>
    <string name="title_activity_registro_firebase2">RegistroFirebase2Activity</string>
    <string name="title_activity_firebase_auth">FirebaseAuth</string>
    <string name="title_activity_email_password">EmailPassword</string>


</resources>
